The importItem now supports folder items and auto-naming of the downloaded files.